--- a/templates/community-post.html
+++ b/templates/community-post.html
@@ -58,9 +58,10 @@
             <b style="color: #ede6df; font-size: 24px">Share your volunteer experience below:</b></br>
             <b style="color: #ede6df; font-size: 24px"> Event Name: </b> <input name=post_name placeholder="Required"/></br></br>
             <b style="color: #ede6df; font-size: 24px"> Location: </b><input name=post_location  placeholder="Required"/></br></br>
-            <b style="color: #ede6df; font-size: 24px"> Date: </b><input name=post_date placeholder="Required"/></br></br>
-              <b style="color: #ede6df; font-size: 24px">Event Description: </b></br><textarea placeholder="Required" name=post_event width= "300px"
+            <b style="color: #ede6df; font-size: 24px"> Contact: </b><input name=post_contact placeholder="Required"/></br></br>
+            <b style="color: #ede6df; font-size: 24px"> Date: </b><input name=post_date placeholder="Required"/></br></br>              <b style="color: #ede6df; font-size: 24px">Event Description: </b></br><textarea placeholder="Required" name=post_event width= "300px"
                 height= "400px"></textarea>
+
           </br>
 
           <div>
