--- a/templates/community-post.html
+++ b/templates/community-post.html
@@ -24,14 +24,14 @@
             <!-- Navbar links -->
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="community">Community</a>
+                    <li class="active">
+                        <a href="community"><b>Community</b></a>
                     </li>
                     <li>
                         <a href="friends">Friends</a>
                     </li>
-                    <li class="active">
-                        <a href="profile"><b>Profile</b></a>
+                    <li>
+                        <a href="profile">Profile</a>
                     </li>
                     <li>
                         <a href="about">About</a>
