--- a/css/community.css
+++ b/css/community.css
@@ -241,6 +241,7 @@ img::-moz-selection {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 10%;
+  margin-top: 50px;
   margin-bottom: 50px;
   grid-column-start: 2;
   grid-column-end: 3;
